Fixed login zone alignement

--- a/less/etalab/navbars.less
+++ b/less/etalab/navbars.less
@@ -505,6 +505,10 @@
         padding: 5px 12px;
     }
 
+    .login {
+        margin-right: 15px;
+    }
+
     .user button {
         padding: 0 10px 0 0;
         // color: darken(white, 10%);
